force-app/integration-framework/objects/Integration_Log__c/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <description>Callout endpoint URL</description>
    <label>Endpoint URL</label>
    <type>Url</type>
</CustomField>