force-app/integration-framework/objects/Integration_Log__c/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <description>Text body of callout request</description>
    <label>Request Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>