force-app/integration-framework/objects/Integration_Log__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if callout executed successfully</description>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>